--- a/yocto-master/master.cfg
+++ b/yocto-master/master.cfg
@@ -1,20 +1,23 @@
 c = BuildmasterConfig = {}
 from buildbot.buildslave import BuildSlave
-c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2)]
+from buildbot.ec2buildslave import EC2LatentBuildSlave
+c['slaves'] = [BuildSlave("builder1", "bKRlZKtUT", max_builds=2)]
+#c['slaves'] = [EC2LatentBuildSlave('builder1', 'ubuntu', 'c1.xlarge',
+#                                   ami='ami-8e109ebe', region='us-west-2'
+#                                   )]
 c['slavePortnum'] = 9989
-
 c['status'] = []
 from buildbot.status.html import WebStatus
 from buildbot.status.web.authz import Authz
 from buildbot.status.web.auth import BasicAuth
-users = [('<USER>', '<PASS>')]
+users = [('HqMB0wWCa', 'bKRlZKtUT')]
 authz_cfg=Authz(auth=BasicAuth(users),
 	forceBuild = 'auth',
 	stopBuild = 'auth',
 	cancelPendingBuild = True,
 	pingBuilder = False)
 c['status'].append(WebStatus(http_port=8010, authz=authz_cfg))
-c['debugPassword'] = "<PASS>"
+c['debugPassword'] = "bKRlZKtUT"
 c['buildbotURL'] = "http://localhost:8010"
 
 import yoctoABConfig
@@ -24,4 +27,5 @@ c['change_source'] = yoctoABConfig.yocto_sources
 c['schedulers'] = yoctoABConfig.yocto_sched
 c['projectName'] = yoctoABConfig.yocto_projname
 c['projectURL'] = yoctoABConfig.yocto_projurl
+
 
