--- a/yocto-master/master.cfg
+++ b/yocto-master/master.cfg
@@ -1,7 +1,7 @@
 c = BuildmasterConfig = {}
 from buildbot.buildslave import BuildSlave
 from buildbot.ec2buildslave import EC2LatentBuildSlave
-c['slaves'] = [BuildSlave("builder1", "bKRlZKtUT", max_builds=2)]
+c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2)]
 #c['slaves'] = [EC2LatentBuildSlave('builder1', 'ubuntu', 'c1.xlarge',
 #                                   ami='ami-8e109ebe', region='us-west-2'
 #                                   )]
@@ -10,14 +10,14 @@ c['status'] = []
 from buildbot.status.html import WebStatus
 from buildbot.status.web.authz import Authz
 from buildbot.status.web.auth import BasicAuth
-users = [('HqMB0wWCa', 'bKRlZKtUT')]
+users = [('<USER>', '<PASS>')]
 authz_cfg=Authz(auth=BasicAuth(users),
 	forceBuild = 'auth',
 	stopBuild = 'auth',
 	cancelPendingBuild = True,
 	pingBuilder = False)
 c['status'].append(WebStatus(http_port=8010, authz=authz_cfg))
-c['debugPassword'] = "bKRlZKtUT"
+c['debugPassword'] = "<PASS>"
 c['buildbotURL'] = "http://localhost:8010"
 
 import yoctoABConfig
