--- a/yocto-master/master.cfg
+++ b/yocto-master/master.cfg
@@ -1,6 +1,6 @@
 c = BuildmasterConfig = {}
 from buildbot.buildslave import BuildSlave
-c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2)]
+c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2), BuildSlave("builder2", "<PASS>", max_builds=2)]
 c['slavePortnum'] = 9989
 
 c['status'] = []
