--- a/yocto-master/master.cfg
+++ b/yocto-master/master.cfg
@@ -1,10 +1,7 @@
 c = BuildmasterConfig = {}
 from buildbot.buildslave import BuildSlave
 from buildbot.ec2buildslave import EC2LatentBuildSlave
-c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2)]
-#c['slaves'] = [EC2LatentBuildSlave('builder1', 'ubuntu', 'c1.xlarge',
-#                                   ami='ami-8e109ebe', region='us-west-2'
-#                                   )]
+c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2), BuildSlave("builder2", "<PASS>", max_builds=2)]
 c['slavePortnum'] = 9989
 c['status'] = []
 from buildbot.status.html import WebStatus
