--- a/yocto-master/master.cfg
+++ b/yocto-master/master.cfg
@@ -1,20 +1,23 @@
 c = BuildmasterConfig = {}
 from buildbot.buildslave import BuildSlave
 from buildbot.ec2buildslave import EC2LatentBuildSlave
-c['slaves'] = [BuildSlave("builder1", "OQk8aeqsD", max_builds=2), BuildSlave("builder2", "OQk8aeqsD", max_builds=2), BuildSlave("builder3", "OQk8aeqsD", max_builds=2),BuildSlave("builder4", "OQk8aeqsD", max_builds=2)]
+c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2)]
+#c['slaves'] = [EC2LatentBuildSlave('builder1', 'ubuntu', 'c1.xlarge',
+#                                   ami='ami-8e109ebe', region='us-west-2'
+#                                   )]
 c['slavePortnum'] = 9989
 c['status'] = []
 from buildbot.status.html import WebStatus
 from buildbot.status.web.authz import Authz
 from buildbot.status.web.auth import BasicAuth
-users = [('7fARBuxNH', 'OQk8aeqsD')]
+users = [('<USER>', '<PASS>')]
 authz_cfg=Authz(auth=BasicAuth(users),
 	forceBuild = 'auth',
 	stopBuild = 'auth',
 	cancelPendingBuild = True,
 	pingBuilder = False)
 c['status'].append(WebStatus(http_port=8010, authz=authz_cfg))
-c['debugPassword'] = "OQk8aeqsD"
+c['debugPassword'] = "<PASS>"
 c['buildbotURL'] = "http://localhost:8010"
 
 import yoctoABConfig
