--- a/yocto-master/master.cfg
+++ b/yocto-master/master.cfg
@@ -1,7 +1,7 @@
 c = BuildmasterConfig = {}
 from buildbot.buildslave import BuildSlave
 from buildbot.ec2buildslave import EC2LatentBuildSlave
-c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2)]
+c['slaves'] = [BuildSlave("builder1", "<PASS>", max_builds=2), BuildSlave("builder2", "<PASS>", max_builds=2), BuildSlave("builder3", "<PASS>", max_builds=2), BuildSlave("builder4", "<PASS>", max_builds=2)]
 #c['slaves'] = [EC2LatentBuildSlave('builder1', 'ubuntu', 'c1.xlarge',
 #                                   ami='ami-8e109ebe', region='us-west-2'
 #                                   )]
